return value of UTF8Toisolat1 and isolat1ToUTF8 changed in libxml2 version 2.6.16, see

http://bugzilla.gnome.org/show_bug.cgi?id=153937

this will now work with older versions again